--- a/game1005/game1005.vcxproj.filters
+++ b/game1005/game1005.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="源.cpp">
+    <ClCompile Include="Lab2_execrise.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
