--- a/game1005/game1005.vcxproj.filters
+++ b/game1005/game1005.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Lab2_execrise.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="labWeek5.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
